﻿3.0.190.alpha.1 - 16th April 2024
- Cataclysm Classic Beta: Fixed Blasted Lands reveal data.

3.0.189 - 16th April 2024
- Updated for Cataclysm Classic Beta.
- Cataclysm Classic Beta: Updated map reveal data for Cataclysm Classic.
- Cataclysm Classic Beta: The 'Show points of interest' option is currently unavailable.

3.0.188 - 10th April 2024
- The addon will no longer show 'Wrong version installed' when run on Cataclysm Classic.

3.0.179 - 14th February 2024
- Updated Hillsbrad Foothills to Arathi Highlands zone crossing.

3.0.162 - 1st November 2023
- For 'Use default map', the map title will be shown if you are not using 'Show zone menus'.

3.0.161 - 25th October 2023
- For 'Set map opacity', toggling the option will now require a UI reload.  The option will be locked out if ElvUI is installed with the maps module enabled.
- For 'Use default map', the blackout frame is now hidden when the map is maximised.  The 'Set map opacity' option will be locked out.

3.0.160 - 19th October 2023
- Updates for game version 3.4.3.
- Fixed two issues with 'Set map opacity' (opacity not applied on login and opacity incorrectly applied to maximised map).
- Fixed two issues with 'Use default map' (maximised map was movable and possibly non-interactive on login).
- For 'Use default map', the smaller map frame will no longer align with other system frames.

3.0.159 - 16th October 2023
- Updates for game version 3.4.3.

3.0.158 - 14th October 2023
- Added new option 'Show objectives'.  If enabled, quest objectives will be shown on the map.  It's enabled by default.
- The 'Remove map border' option has been removed.
- The 'Show coordinates' option no longer requires a UI reload once again.
- Removed 3.4.3 transitional code.

3.0.157 - 12th October 2023